--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.18.5",
+    "casperjs": "^1.1.3",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.4",
     "leaflet": "^1.0.3"
   },
-  "preinstall" : "npm i -g casperjs jshint gulp",
+  "preinstall": "npm i -g casperjs jshint gulp",
   "start": "gulp",
   "scripts": {
     "test": "npm run test-src && npm run test-example && npm run test-casper",
